--- a/public/css/index.css
+++ b/public/css/index.css
@@ -358,6 +358,8 @@
     	margin-top:8px;
     	font:12px/12px a;
     	color:rgb(0,0,0,0.7);
+
+        /*单行文字截断*/
     	overflow: hidden;
     	text-overflow:ellipsis;
     	white-space: nowrap;
@@ -367,10 +369,12 @@
     	height: 2.8em;
     	font:12px/1.4em a;
     	color:rgb(0,0,0,0.6);
-    	overflow: hidden;
-    	text-overflow:ellipsis;
-    	white-space: nowrap;
-
+    	
+        
+        /*多行文字截断*/
+        overflow: hidden;
+        text-overflow:ellipsis;
+        /*white-space: nowrap;*/
     	display: -webkit-box;
     	-webkit-line-clamp:2;
     	-webkit-box-orient:vertical;
@@ -383,7 +387,7 @@
     }
     .book-h5__tag {
     	float: left;
-    	margin: -3px 7px 0 0;
+    	margin: -3px 7px 6px 0;
     	padding: 3px 6px 2px;
     	max-width: 6em;
     	font:10px/11px a;
