--- a/views/include/common-header.html
+++ b/views/include/common-header.html
@@ -18,7 +18,7 @@
 		margin: 15px 0 0 16px;
 		width: 10px;
 		height: 16px;
-		background:url(/static/img/back.png) no-repeat;
+		background:url(/public/imgs/back.png) no-repeat;
 		background-size: 10px 16px;
 	}
 
