--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,15 +2,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+		<!-- 防止数字被检测生手机号 -->
 		<meta name="format-detection" content="telephone=no">
 		<link rel="stylesheet" type="text/css" href="/public/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="/public/css/index.css">
 		<title>书城首页</title>
 	</head>
 	<body>
-		<div id="app" style="width:{{ screen_width }}px;overflow:hidden">
+		<div id="app" style="width:{{screen_width}}px;overflow:hidden">
 			<% include include/header.html %>
-			<div style="width:{{ double_screen_width }}px;transition-duration:.5s;transform:translate3d({{ position }}px,0px,0px)">
+			<div style="width:{{double_screen_width}}px;transition-duration:.5s;transform:translate3d({{position}}px,0px,0px)">
 				<div class="container-warp"
 				style="width:{{ screen_width }}px;float:left">
 					<div class="container-scroll" style="top:0px">
@@ -23,7 +24,7 @@
 						<% include include/index-bottom.html %>
 					</div>
 				</div>
-				<div style="width:{{ screen_width }}px;float:left;">
+				<div style="width:{{screen_width}}px;float:left;">
 					<% include include/index-shelf.html %>
 				</div>
 			</div>
