--- a/views/reader.ejs
+++ b/views/reader.ejs
@@ -187,7 +187,7 @@
 			</div>
 			<!-- 顶部导航 -->
 			<div id="top_nav" class="top-nav" style="display: none">
-				<div class="icon-back"></div>
+				<a href="/" class="icon-back"></a>
 				<div class="nav-title">返回书架</div>
 			</div>
 			<div id="fiction_chapter_title"></div>
@@ -246,6 +246,7 @@
 	</script>
 	<script src="../public/js/lib/base64.js"></script>
 	<script src="../public/js/lib/jsonp.js"></script>
+	<script src="../public/js/lib/vue2.js"></script>
 	<script>
 		(function(){
 			var Util = (function(){
