--- a/views/include/index-hot.html
+++ b/views/include/index-hot.html
@@ -5,17 +5,17 @@
 	<ul class="list-h5">
 		<li v-for="item in hot">
 			<div class="book-h5">
-				<a href="/book?id={{ item.fiction_id }}">
+				<a :href="'/book?id='+item.fiction_id">
 					<div class="book-h5__cover">
-						<img alt="{{ item.title }}" v-bind:src="item.cover">
+						<img :alt="item.title" :src="item.cover">
 						<p class="book-h5__finish">完结</p>
 					</div>
 					<div class="book-h5__info">
-						<p class="book-h5__title">{{ item.title }}</p>
-						<p class="book-h5__author">{{ item.authors }}</p>
-						<p class="book-h5__summary">{{ item.summary }}</p>
+						<p class="book-h5__title">{{item.title}}</p>
+						<p class="book-h5__author">{{item.authors}}</p>
+						<p class="book-h5__summary">{{item.summary}}</p>
 						<div class="book-h5__wrap">
-							<div class="book-h5__tag" v-for="tag in item.tags">{{ tag }}</div>
+							<div class="book-h5__tag" v-for="tag in item.tags">{{tag}}</div>
 						</div>
 					</div>
 				</a>
