--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,11 @@
 		<title>书城首页</title>
 	</head>
 	<body>
-		<div id="app" style="width:{{screen_width}}px;overflow:hidden">
+		<div id="app" :style="{width:screen_width+'px'}" style="overflow:hidden">
 			<% include include/header.html %>
-			<div style="width:{{double_screen_width}}px;transition-duration:.5s;transform:translate3d({{position}}px,0px,0px)">
+			<div :style="{width:double_screen_width+'px',transform:'translate3d('+position+'px,0px,0px)'}" style="transition-duration:.5s;">
 				<div class="container-warp"
-				style="width:{{ screen_width }}px;float:left">
+				:style="{width:screen_width+'px'}" class="book_city" style="float: left;">
 					<div class="container-scroll" style="top:0px">
 						<% include include/index-top.html %>
 						<% include include/index-hot.html %>
@@ -24,13 +24,13 @@
 						<% include include/index-bottom.html %>
 					</div>
 				</div>
-				<div style="width:{{screen_width}}px;float:left;">
+				<div :style="{width:screen_width+'px'}" class="book_shelf" style="float: left;">
 					<% include include/index-shelf.html %>
 				</div>
 			</div>
 		</div>
 	</body>
-	<script src="/public/js/lib/vue.js"></script>
+	<script src="/public/js/lib/vue2.js"></script>
 	<script src="/public/js/lib/zepto.js"></script>
 	<script src="/public/js/index.js"></script>
 </html>
