--- a/public/css/index.css
+++ b/public/css/index.css
@@ -327,11 +327,13 @@
     	border:1px solid #f0f0f0;
     	border-radius: 1px;
     	overflow: hidden;
+        box-shadow: 0px 6px 5px -3px #aaa;
     }
     .book-h5 img {
     	width: 100%;
     	height: 100%;
     	border-radius: 1px;
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
     }
     .book-h5__finish {
     	position: absolute;
