fixed the bug of shelf_show

--- a/views/include/index-shelf.html
+++ b/views/include/index-shelf.html
@@ -1,4 +1,4 @@
-<div class="shelf">
+<div class="shelf" v-show="shelf_show" style="display: none">
 	<div class="shelf__top">
 		<div class="shelf__switch"></div>
 		<a href="/search">
