--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,6 +89,7 @@
 	<script src="/public/js/lib/vue2.js"></script>
 	<script src="/public/js/index.js"></script>
 	<script type="text/javascript">
+	// 判断是移动端还是PC端
 	!function(){
 		var pathName= window.location.pathname;
 		if (pathName==='/bookshop') {
