--- a/views/include/index-top.html
+++ b/views/include/index-top.html
@@ -1,15 +1,33 @@
+
 <section class="top-home">
 	<!-- 搜索框 -->
 	<a href="/search">
 		<div class="top-home__search">输入书名/作者/关键字</div>
 	</a>
 	<!-- 輪播圖 -->
-	<div class="slider-banner">
-		<div>
-			<a href="http://dushu.xiaomi.com/#page=channel&id=410">
-				<img class="cover" src="http://image.read.duokan.com/mfsv2/download/fdsc3/p01tBqnupVze/qayTXiXrMm1lVm.jpg"/>
-			</a>
-		</div>
+	<div class="slider-banner" >
+		<ul class="slider-wrapper" :style="{transitionDuration:sd_duration+'s',transform:'translate3d('+trans+'px,0px,0px)',width:fourth_screen_width+'px'}" >
+			<li class="slider-item" :style="{width:screen_width}">
+				<a href="http://dushu.xiaomi.com/#page=channel&id=410">
+					<img class="cover" src="http://image.read.duokan.com/mfsv2/download/fdsc3/p01tBqnupVze/qayTXiXrMm1lVm.jpg"/>
+				</a>
+			</li>
+			<li class="slider-item" :style="{width:screen_width}">
+				<a href="http://dushu.xiaomi.com/#page=channel&id=410">
+					<img class="cover" src="http://t1.market.xiaomi.com/thumbnail/jpeg/l640/Duokan/0c2eeb499c85646e42356abba72a8b25ff697f9b9?"/>
+				</a>
+			</li>
+			<li class="slider-item" :style="{width:screen_width}">
+				<a href="http://dushu.xiaomi.com/#page=channel&id=410">
+					<img class="cover" src="http://t1.market.xiaomi.com/thumbnail/jpeg/l640/Duokan/0e7a88448e66d41e803d3b6b276c04e48911c788c?"/>
+				</a>
+			</li>
+			<li class="slider-item" :style="{width:screen_width}">
+				<a href="http://dushu.xiaomi.com/#page=channel&id=410">
+					<img class="cover" src="http://image.read.duokan.com/mfsv2/download/fdsc3/p01tBqnupVze/qayTXiXrMm1lVm.jpg"/>
+				</a>
+			</li>
+		</ul>
 	</div>
 	<!-- 導航條 -->
 	<ul class="top-home__btn">
