--- a/views/usercenter.ejs
+++ b/views/usercenter.ejs
@@ -4,12 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 	<title>测试页</title>
-	<style>
-		*{
-			margin: 0;
-			padding: 0;
-		}
-	</style>
+	<link rel="stylesheet" href="../../public/css/reset.css">
+	<link rel="stylesheet" href="../../public/css/include/common-header.css">
 </head>
 <body>
 	<% include include/common-header.html %>
